# aikb

./: .env.example  LICENSE  PYTHON_SETUP_GUIDE.md  QUICKSTART.md  README.md  TASKS.md  pyproject.toml  requirements.txt  run_agent.sh
dev/devlog/cburleson/: 2025-11-17.md
devlog/: 2025-11-09.md
devlog/cburleson/: 2025-11-09.md  2025-11-16.md  2025-11-17.md
docs/: aikb-spec.md  capstone-guide.md
docs/developer-guide/: reference-resources.md
docs/developer-logs/cburleson/: 2025-11-09.md  2025-11-16.md  2025-11-22.md
docs/obsidian-guide/: obsidian-guide.md
my_agent/: agent.py
reference-vault/.obsidian/: app.json  bookmarks.json  types.json  workspace.json
reference-vault/3 Resources/Events/Cancelled Events/: 2024 Barr Trail Mountain Race.md  Cancelled Events.md
reference-vault/3 Resources/Events/Current and Future Events/: Barr Camp and Pike's Peak Ascent.md  Barr Trail Mountain Race.md  Blake and Sydney's Wedding.md  Current and Future Events.md  Garden of the God's Trail Run.md  Georgetown Slacker Half Marathon.md  Staunton Rocks! Marathon & Half.md
reference-vault/3 Resources/Events/Past Events/: Estes Park Marathon.md  Past Events.md  Run Through Time Marathon, Salida.md
reference-vault/3 Resources/Templates/: CreativeWork.md  DailyNote.md  Event Template.md  Event Template.md.md  Event.md  Organization.md  Person Template.md  Person.md  Place.md  Project.md  Task.md
specs/: aikb-0.1.md  aikb-0.2.md  aikb-specification.md  aikb-use-cases.md
src/: agent.py
user-guide/: getting-started.md
(+14 files in other folders)
