[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aikb"
version = "0.1.0"
description = "Agent-Interoperable Knowledge Base - Transform your personal knowledge into an AI-ready ecosystem"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-SA 4.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "agents", "knowledge-base", "pkm", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-adk>=0.1.0",
    "google-genai",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/yourusername/aikb"
Repository = "https://github.com/yourusername/aikb"
Issues = "https://github.com/yourusername/aikb/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
